# game-of-life

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  game-of-life.cpp  game-of-life.h  game-of-life.hpp
src/: CMakeLists.txt  main.cpp  main.hpp
